<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/asa_fundo3"
    tools:context=".TelaVisualizacao">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/aviao_logo6"
            android:layout_width="116dp"
            android:layout_height="113dp"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/imgs"
            app:srcCompat="@drawable/aviao_logo1" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="30dp" />

            <TextView
                android:id="@+id/tvVisaoGeral"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/tvVisaoGeral"
                android:textAlignment="center"
                android:textColor="#000000"
                android:textColorHint="#000000"
                android:textSize="18sp" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="10dp" />

            <TextView
                android:id="@+id/tvTipoViag2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:hint="@string/tvTipoViag"
                android:textColor="#000000"
                android:textColorHighlight="#000000"
                android:textColorHint="#000000"
                android:textSize="20sp" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/tvResTipoViag"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:textSize="17sp" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="20dp" />

                <TextView
                    android:id="@+id/tvDatas2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="30dp"
                    android:hint="@string/tvDatas2"
                    android:textColorHint="#000000"
                    android:textSize="20sp" />

            <TextView
                android:id="@+id/tvResData1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:hint="@string/tvResData1"
                android:textSize="20sp" />


            <TextView
                android:id="@+id/tvResData2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:hint="@string/tvResData2"
                android:textSize="20sp" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="20dp" />

            <TextView
                android:id="@+id/tvPesoBagagem2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:hint="@string/tvPesoBagagem2"
                android:textColorHint="#000000"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/tvResPesoBag"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:hint="@string/tvResPesoBag"
                android:textSize="17sp" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="20dp" />

            <TextView
                android:id="@+id/cbLugar2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:hint="@string/tvSeleLugar2"
                android:textColorHint="#000000"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/cbResLugar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:hint="@string/tvResPesoBag"
                android:textSize="17sp" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="20dp" />

            <TextView
                android:id="@+id/tvSpinnerHotel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:hint="@string/tvSpinnerHotel"
                android:textColorHint="#000000"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/tvResSpinnerHotel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:hint="@string/tvResSpinnerHotel"
                android:textSize="17sp" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="39dp" />

            <Button
                android:id="@+id/btFinalizar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:background="@drawable/buttons1"
                android:hint="@string/btFinalizar"
                android:textColor="#040000"
                android:textColorHint="#000000" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="35dp" />

            <TextView
                android:id="@+id/tvFrom6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/tvFrom6"
                android:textAlignment="center"
                android:textColor="#000000"
                android:textColorHighlight="#7E7979"
                android:textColorHint="#000000"
                android:textColorLink="#000000" />

        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>