<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/asa_fundo1"
    tools:context=".TelaPreferencias1">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/aviao_logo3"
                android:layout_width="116dp"
                android:layout_height="113dp"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="30dp"
                android:background="@drawable/imgs"
                app:srcCompat="@drawable/aviao_logo1" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="38dp" />

            <TextView
                android:id="@+id/tvTipoViag2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:hint="@string/tvTipoViag"
                android:textColorHint="#000000" />

            <RadioGroup
                android:id="@+id/rgTipos"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:textColorHint="#000000">

                <RadioButton
                    android:id="@+id/rbIda"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="35dp"
                    android:checked="true"
                    android:hint="@string/rbIda"
                    android:textColorHint="#000000" />

                <RadioButton
                    android:id="@+id/rbIdaVolta"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="35dp"
                    android:hint="@string/rbIdaVolta"
                    android:textColorHint="#000000"/>

            </RadioGroup>

            <Space
                android:layout_width="match_parent"
                android:layout_height="20dp" />

            <TextView
                android:id="@+id/tvDatas"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:hint="@string/tvDatas"
                android:textColorHint="#000000"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/etDate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="30dp"
                    android:layout_marginRight="30dp"
                    android:layout_weight="1"
                    android:ems="10"
                    android:hint="@string/etDate"
                    android:inputType="date" />

                <EditText
                    android:id="@+id/etDate2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="30dp"
                    android:layout_marginRight="30dp"
                    android:layout_weight="1"
                    android:ems="10"
                    android:hint="@string/etDate2"
                    android:inputType="date" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="381dp"
                android:orientation="vertical">


                <Space
                    android:layout_width="match_parent"
                    android:layout_height="20dp" />

                <TextView
                    android:id="@+id/tvPesoBagagem"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="30dp"
                    android:layout_marginRight="30dp"
                    android:hint="@string/tvPesoBagagem"
                    android:textColorHint="#000000"/>

                <EditText
                    android:id="@+id/etPesoKg"
                    android:layout_width="115dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="60dp"
                    android:layout_marginRight="30dp"
                    android:ems="10"
                    android:hint="@string/etPesoKg"
                    android:inputType="numberPassword" />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="127dp" />

                <Button
                    android:id="@+id/btBuscar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="30dp"
                    android:layout_marginRight="30dp"
                    android:hint="@string/btBuscar"
                    android:textColorHint="#000000"
                    android:background="@drawable/buttons1"/>

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="76dp" />

                <TextView
                    android:id="@+id/tvFrom4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/tvFrom4"
                    android:textAlignment="center"
                    android:textColor="#7E7979"
                    android:textColorHighlight="#7E7979"
                    android:textColorHint="#7E7979"
                    android:textColorLink="#7E7979" />

            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_end="48dp" />

</androidx.constraintlayout.widget.ConstraintLayout>