<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/mapa_background1"
    tools:context=".TelaInicio">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/aviao_logo2"
                android:layout_width="116dp"
                android:layout_height="113dp"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="30dp"
                app:srcCompat="@drawable/aviao_logo1" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="38dp" />

            <TextView
                android:id="@+id/tvLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:hint="@string/tvLogin"
                android:textAlignment="center"
                android:textColorHint="#000000"
                android:textSize="18sp" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="20dp" />

            <EditText
                android:id="@+id/etNomeLog"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:ems="10"
                android:hint="@string/etNomeLog"
                android:textColorHint="#000000"
                android:inputType="textPersonName" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="20dp" />

            <EditText
                android:id="@+id/etSenhaLog"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:ems="10"
                android:hint="@string/etSenhaLog"
                android:textColorHint="#000000"
                android:inputType="textPassword" />


            <Space
                android:layout_width="match_parent"
                android:layout_height="106dp" />

            <Button
                android:id="@+id/btLogar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:background="@drawable/buttons1"
                android:hint="@string/btLogar"
                android:textColorHint="#000000" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="20dp" />

            <Button
                android:id="@+id/btCadastrarSe"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:background="@drawable/buttons1"
                android:hint="@string/btCadastrarSe"
                android:textColorHint="#000000" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="111dp" />

            <TextView
                android:id="@+id/tvFrom3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/tvFrom3"
                android:textAlignment="center"
                android:textColor="#000000"
                android:textColorHighlight="#7E7979"
                android:textColorHint="#000000"
                android:textColorLink="#7E7979" />
        </LinearLayout>

    </ScrollView>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_end="48dp" />
</androidx.constraintlayout.widget.ConstraintLayout>