<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Space
                android:layout_width="match_parent"
                android:layout_height="170dp" />

            <ImageView
                android:id="@+id/aviao_logo1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="85dp"
                android:layout_marginRight="85dp"
                android:background="@drawable/imgs2"
                app:srcCompat="@drawable/aviao_logo1" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="16dp" />

            <TextView
                android:id="@+id/tvNome"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-condensed-medium"
                android:hint="@string/tvNome"
                android:textAlignment="center"
                android:textColor="#000000"
                android:textColorHighlight="#000000"
                android:textColorHint="#000000"
                android:textColorLink="#000000"
                android:textCursorDrawable="#000000"
                android:textSize="30sp" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="21dp" />

            <TextView
                android:id="@+id/tvAviso1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/tvAviso"
                android:textAlignment="center"
                android:textColorHint="#F12F2F"
                android:textSize="15sp" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="179dp" />

            <TextView
                android:id="@+id/tvFrom"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/tvFrom"
                android:textAlignment="center"
                android:textColor="#7E7979"
                android:textColorHighlight="#7E7979"
                android:textColorHint="#7E7979"
                android:textColorLink="#7E7979" />
        </LinearLayout>
    </ScrollView>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="683dp" />
</androidx.constraintlayout.widget.ConstraintLayout>